--- a/themes/showcase.html
+++ b/themes/showcase.html
@@ -92,25 +92,25 @@
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Number of posts on the archive page.</p>
 </div>
-</dd><dt>Type:</dt><dd>integer</dd><dt>Default:</dt><dd><pre><code>15</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>integer</dd><dt>Default:</dt><dd><pre><code class="nix">15</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>index.itemsPerPage</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Number of posts on the index page.</p>
 </div>
-</dd><dt>Type:</dt><dd>integer</dd><dt>Default:</dt><dd><pre><code>4</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>integer</dd><dt>Default:</dt><dd><pre><code class="nix">4</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>site.copyright</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Site copyright, added in the footer.</p>
 </div>
-</dd><dt>Type:</dt><dd>string</dd><dt>Default:</dt><dd><pre><code>&quot;&copy; 2017&quot;</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>string</dd><dt>Default:</dt><dd><pre><code class="nix">&quot;&amp;copy; 2017&quot;</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>site.description</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Site description, added in the footer.</p>
 </div>
-</dd><dt>Type:</dt><dd>string</dd><dt>Default:</dt><dd><pre><code>&quot;Write a description for your new site here.&quot;</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>string</dd><dt>Default:</dt><dd><pre><code class="nix">&quot;Write a description for your new site here.&quot;</code></pre></dd></dl>
 </li></ul>
 </div></div>
 </div>
@@ -137,19 +137,5 @@
   ga('send', 'pageview');
 
 </script>
-<!-- Piwik -->
-<script type="text/javascript">
-  var _paq = _paq || [];
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u="//piwik.synap.fr/";
-    _paq.push(['setTrackerUrl', u+'piwik.php']);
-    _paq.push(['setSiteId', '2']);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-  })();
-</script>
-<!-- End Piwik Code -->
 </body>
 </html>
