--- a/themes/hyde.html
+++ b/themes/hyde.html
@@ -48,8 +48,8 @@ Requires the <code>generic-templates</code> theme.</p>
 <p class="license">License: <a href="http://spdx.org/licenses/MIT">MIT License</a></p>
 
 <p class="links">
-    <a href="https://styx-static.github.io/styx-theme-generic-hyde" class="btn btn-info"><i class="fa fa-desktop" aria-hidden="true"></i> Demo</a> 
-    <a href="https://github.com/styx-static/styx-theme-generic-hyde" class="btn btn-info"><i class="fa fa-home" aria-hidden="true"></i> Homepage</a>
+    <a href="https://styx-static.github.io/styx-theme-hyde" class="btn btn-info"><i class="fa fa-desktop" aria-hidden="true"></i> Demo</a> 
+    <a href="https://github.com/styx-static/styx-theme-hyde" class="btn btn-info"><i class="fa fa-home" aria-hidden="true"></i> Homepage</a>
   </p>
 
 <img class="img-responsive center-block" src="https://styx-static.github.io/styx-site/imgs/themes/hyde.png" />
@@ -62,39 +62,39 @@ Requires the <code>generic-templates</code> theme.</p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Selects the color scheme. Set to <code>null</code> for default black scheme.</p>
 </div>
-</dd><dt>Type:</dt><dd>null or one of "08", "09", "0a", "0b", "0c", "0d", "0e", "0f"</dd><dt>Default:</dt><dd><pre><code>null</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>null or one of "08", "09", "0a", "0b", "0c", "0d", "0e", "0f"</dd><dt>Default:</dt><dd><pre><code class="nix">null</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>itemsPerPage</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Number of posts per page.</p>
 </div>
-</dd><dt>Type:</dt><dd>integer</dd><dt>Default:</dt><dd><pre><code>3</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>integer</dd><dt>Default:</dt><dd><pre><code class="nix">3</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>layout.reverse</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Whether to enable reverse layout.</p>
 </div>
-</dd><dt>Type:</dt><dd>boolean</dd><dt>Default:</dt><dd><pre><code>false</code></pre></dd><dt>Example:</dt><dd><pre><code>true</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>boolean</dd><dt>Default:</dt><dd><pre><code class="nix">false</code></pre></dd><dt>Example:</dt><dd><pre><code class="nix">true</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>site.copyright</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Site copyright.</p>
 </div>
-</dd><dt>Type:</dt><dd>string</dd><dt>Default:</dt><dd><pre><code>&quot;&copy; 2017. All rights reserved. 
+</dd><dt>Type:</dt><dd>string</dd><dt>Default:</dt><dd><pre><code class="nix">&quot;&amp;copy; 2017. All rights reserved. 
 &quot;</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>site.description</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Site description.</p>
 </div>
-</dd><dt>Type:</dt><dd>string</dd><dt>Default:</dt><dd><pre><code>&quot;An elegant open source and mobile first theme for styx made by &lt;a href=\&quot;http://twitter.com/mdo\&quot;&gt;@mdo&lt;/a&gt;. Originally made for Jekyll.
+</dd><dt>Type:</dt><dd>string</dd><dt>Default:</dt><dd><pre><code class="nix">&quot;An elegant open source and mobile first theme for styx made by &lt;a href=\&quot;http://twitter.com/mdo\&quot;&gt;@mdo&lt;/a&gt;. Originally made for Jekyll.
 &quot;</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>site.title</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Site title.</p>
 </div>
-</dd><dt>Type:</dt><dd>string</dd><dt>Default:</dt><dd><pre><code>&quot;Hyde&quot;</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>string</dd><dt>Default:</dt><dd><pre><code class="nix">&quot;Hyde&quot;</code></pre></dd></dl>
 </li></ul>
 </div></div>
 </div>
@@ -121,19 +121,5 @@ Requires the <code>generic-templates</code> theme.</p>
   ga('send', 'pageview');
 
 </script>
-<!-- Piwik -->
-<script type="text/javascript">
-  var _paq = _paq || [];
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u="//piwik.synap.fr/";
-    _paq.push(['setTrackerUrl', u+'piwik.php']);
-    _paq.push(['setSiteId', '2']);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-  })();
-</script>
-<!-- End Piwik Code -->
 </body>
 </html>
